--- a/HTML/Website.html
+++ b/HTML/Website.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <title>PesterPage concept</title>
-    </header>
-    <link rel="stylesheet" href="styles.css">
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
+    </head>
     <body>
+        <header>
+            <h1>PesterPage</h1>
+            <nav>
+                <menu>
+                    <li>My Page</li>
+                    <li>Feed</li>
+                    <li>Friends</li>
+                    <li>About</li>
+                </menu>
+            </nav>
+            <hr>
+        </header>
+        <main>
+            <h1>Please Log or Sign Up!</h1>
+            <form method="get" action=""></form>
+        </main>
         <p>Dummytext</p>
     </body>
 </html>
