--- a/HTML/feed.html
+++ b/HTML/feed.html
@@ -33,6 +33,6 @@
                 <button type="submit">Create account</button>
             </form>
         </main>
-        <p>Dummytext</p>
+        <p>Feet</p>
     </body>
 </html>
