Finished the basic setup for the home page

--- a/HTML/Website.html
+++ b/HTML/Website.html
@@ -32,7 +32,12 @@
                 <button type="submit">Login</button>
                 <button type="submit">Create account</button>
             </form>
+            <hr>
         </main>
-        <p>Dummytext</p>
+        <footer>
+            <span>Chandler Brown</span>
+            <br>
+            <span><a href="https://github.com/Chanmanb?tab=repositories" style="color: #FFFF00">Github account (please subscribe)</span>
+        </footer>
     </body>
 </html>
