--- a/HTML/Website.html
+++ b/HTML/Website.html
@@ -10,16 +10,16 @@
             <h1>PesterPage</h1>
             <nav>
                 <menu>
-                    <li>My Page</li>
-                    <li>Feed</li>
-                    <li>Friends</li>
-                    <li>About</li>
+                    <li><a href="Website.html">Home</a></li>
+                    <li><a href="feed.html">Feed</a></li>
+                    <li><a href="friends.html">Freinds</a></li>
+                    <li><a href="about.html">About</a></li>
                 </menu>
             </nav>
             <hr>
         </header>
         <main>
-            <h1>Please Log or Sign Up!</h1>
+            <h1>Please Login or Sign Up or Leave!</h1>
             <form method="get" action="feed.html">
                 <div>
                     <span>Email</span>
