Finished up the friends tab and started on the feed tab

--- a/HTML/feed.html
+++ b/HTML/feed.html
@@ -10,16 +10,18 @@
             <h1>PesterPage</h1>
             <nav>
                 <menu>
-                    <li>My Page</li>
-                    <li>Feed</li>
-                    <li>Friends</li>
-                    <li>About</li>
+                    <li><a href="Website.html">Home</a></li>
+                    <li><a href="feed.html">Feed</a></li>
+                    <li><a href="friends.html">Freinds</a></li>
+                    <li><a href="about.html">About</a></li>
                 </menu>
             </nav>
             <hr>
         </header>
         <main>
-            <h1>Please Log or Sign Up!</h1>
+            <h1>Your Feed</h1>
+            
+            <!-- <h1>Please Login or Sign Up or Leave!</h1>
             <form method="get" action="feed.html">
                 <div>
                     <span>Email</span>
@@ -31,8 +33,13 @@
                 </div>
                 <button type="submit">Login</button>
                 <button type="submit">Create account</button>
-            </form>
+            </form> -->
+            <hr>
         </main>
-        <p>Feet</p>
+        <footer>
+            <span>Chandler Brown</span>
+            <br>
+            <span><a href="https://github.com/Chanmanb?tab=repositories" style="color: #FFFF00">Github account (please subscribe)</span>
+        </footer>
     </body>
 </html>
