--- a/HTML/about.html
+++ b/HTML/about.html
@@ -19,19 +19,9 @@
             <hr>
         </header>
         <main>
-            <h1>Please Login or Sign Up or Leave!</h1>
-            <form method="get" action="feed.html">
-                <div>
-                    <span>Email</span>
-                    <input type="text" placeholder="Email@provider.gov">
-                </div>
-                <div>
-                    <span>Password: </span>
-                    <input type="password" placeholder="12345">
-                </div>
-                <button type="submit">Login</button>
-                <button type="submit">Create account</button>
-            </form>
+            <h1>What is this?</h1>
+            <p> This is PesterPage, a fun little thought experiment about what a social media would look like if you got to modify your friends' pages in small, mostly inconvenient ways. It's ment to be fun, and then annoying, and then you give up or something. Maybe you come back and fix your page after everyone else has left too, and then your page would be intact.</p>
+            <p></p>
             <hr>
         </main>
         <footer>
