--- a/HTML/feed.html
+++ b/HTML/feed.html
@@ -10,7 +10,7 @@
             <h1>PesterPage</h1>
             <nav>
                 <menu>
-                    <li><a href="Website.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="feed.html">Feed</a></li>
                     <li><a href="friends.html">Freinds</a></li>
                     <li><a href="about.html">About</a></li>
