--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <header>
-            <h1>PesterPage</h1>
-            <nav>
+            <h1 id="Site-name">PesterPage</h1>
+            <nav id="navigator">
                 <menu>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="feed.html">Feed</a></li>
