I made a navigation bar, but  it's being trubblesome

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,18 +8,18 @@
     <body>
         <header>
             <h1 id="Site-name">PesterPage</h1>
-            <nav id="navigator">
-                <menu>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="feed.html">Feed</a></li>
-                    <li><a href="friends.html">Freinds</a></li>
-                    <li><a href="about.html">About</a></li>
-                </menu>
+            <nav id="navigator-nav">
+                <div id="navigator">
+                    <div class="nav-option"><a href="index.html">Home</a></div>
+                    <div class="nav-option"><a href="feed.html">Feed</a></div>
+                    <div class="nav-option"><a href="friends.html">Freinds</a></div>
+                    <div class="nav-option"><a href="about.html">About</a></div>
+                </div>
             </nav>
             <hr>
         </header>
         <main>
-            <h1>Please Login or Sign Up or Leave!</h1>
+            <h2>Please Login or Sign Up or Leave!</h2>
             <form method="get" action="feed.html">
                 <div>
                     <span>Email</span>
