--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1 id="Site-name">PesterPage</h1>
+            <div><h1 id="Site-name">PesterPage</h1></div>
             <nav id="navigator-nav">
                 <div id="navigator">
                     <div class="nav-option"><a href="index.html">Home</a></div>
