Got the footer looking nice and snazzy

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,6 @@
                     <div class="nav-option"><a href="about.html">About</a></div>
                 </div>
             </nav>
-            <!-- <hr> -->
         </header>
         <main>
             <h2>Please Login or Sign Up or Leave!</h2>
@@ -35,9 +34,12 @@
             <hr>
         </main>
         <footer>
-            <span>Chandler Brown</span>
-            <br>
-            <span><a href="https://github.com/Chanmanb?tab=repositories" style="color: #FFFF00">Github account (please subscribe)</span>
+            <span id="sellout">
+                <div id="sellout-kid">
+                <div class="sellout-section">Chandler Brown</div>
+                <div class="sellout-section" id="git"><a href="https://github.com/Chanmanb?tab=repositories">Github account (please subscribe)</div>
+                </div>
+            </span>
         </footer>
     </body>
 </html>
