Coppied and pasted the header and footer to the other pages and made sellout's padding look nice on the single page that scrolls.

--- a/HTML/feed.html
+++ b/HTML/feed.html
@@ -7,16 +7,15 @@
     </head>
     <body>
         <header>
-            <h1>PesterPage</h1>
-            <nav>
-                <menu>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="feed.html">Feed</a></li>
-                    <li><a href="friends.html">Freinds</a></li>
-                    <li><a href="about.html">About</a></li>
-                </menu>
+            <div><h1 id="Site-name">PesterPage</h1></div>
+            <nav id="navigator-nav">
+                <div id="navigator">
+                    <div class="nav-option"><a href="index.html">Home</a></div>
+                    <div class="nav-option"><a href="feed.html">Feed</a></div>
+                    <div class="nav-option"><a href="friends.html">Freinds</a></div>
+                    <div class="nav-option"><a href="about.html">About</a></div>
+                </div>
             </nav>
-            <hr>
         </header>
         <main>
             <h1>Your Feed</h1>
@@ -40,9 +39,12 @@
             <hr>
         </main>
         <footer>
-            <span>Chandler Brown</span>
-            <br>
-            <span><a href="https://github.com/Chanmanb?tab=repositories" style="color: #FFFF00">Github account (please subscribe)</span>
+            <span id="sellout">
+                <div id="sellout-kid">
+                <div class="sellout-section">Chandler Brown</div>
+                <div class="sellout-section" id="git"><a href="https://github.com/Chanmanb?tab=repositories">Github account (please subscribe)</div>
+                </div>
+            </span>
         </footer>
     </body>
 </html>
