fixed spelling mistake in feed

--- a/HTML/feed.html
+++ b/HTML/feed.html
@@ -18,7 +18,7 @@
             </nav>
         </header>
         <main>
-            <h2>Your Feed</h2>
+            <h2>You're Feed</h2>
             <body>
                 <div id=posts-div>
                     <span class="side"></span>
