The friends list was easy, and now done.

--- a/HTML/friends.html
+++ b/HTML/friends.html
@@ -18,20 +18,16 @@
             </nav>
         </header>
         <main>
-            <h1>Friends</h1>
-            <h2>Online</h2>
-            <div>
-                <ul>
-                    <li>John</li>
-                    <li>Jane</li>
-                    <li>Tim</li>
-                </ul>
+            <h2>Friends</h2>
+            <h3 class="onlinicity">Online</h3>
+            <div class="list-of-friends">
+                <span class="friend">John</span>
+                <span class="friend">Jane</span>
+                <span class="friend">Tim</span>
             </div>
-            <h2>Offline</h2>
-            <div>
-                <ul>
-                    <li>Bob</li>
-                </ul>
+            <h3 class="onlinicity">Offline</h3>
+            <div class="list-of-friends">
+                <span class="friend">Bob</span>
             </div>
             <hr>
         </main>
