--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>PesterPage concept</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -28,9 +30,9 @@
                     <div class="login-type">Password <input id="email-input" type="password" placeholder = "***************"></div>
                     </span>
                     <form id="submission-zone" method="get" action="feed.html">
-                        <button type="submit">Login</button>
+                        <button type="button" class="btn btn-primary">Login</button>
                         <span></span>
-                        <button type="submit">Sign up</button>
+                        <button type="button" class="btn btn-primary">Sign up</button>
                     </form>
                 </span>
             </div>
