aimless attempts to get jsx to work

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,50 +1,9 @@
 <!DOCTYPE html>
-<html>
+<div id="root">
     <head>
-        <title>PesterPage concept</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
+        <div>hi</div>
     </head>
     <body>
-        <header>
-            <div><h1 id="Site-name">PesterPage</h1></div>
-            <nav id="navigator-nav">
-                <div id="navigator">
-                    <div class="nav-option"><a href="index.html">Home</a></div>
-                    <div class="nav-option"><a href="feed.html">Feed</a></div>
-                    <div class="nav-option"><a href="friends.html">Freinds</a></div>
-                    <div class="nav-option"><a href="about.html">About</a></div>
-                </div>
-            </nav>
-        </header>
-        <main>
-            <div id="login-span">
-                <span id=login-box>
-                    <span id="login-text">Please Login or Sign Up or Leave!</span>
-                    <span id="username">
-                        <div class="login-type">Email <input id="email-input" type="text" placeholder="Email@provider.gov"></div>
-                    </span>
-                    <span id="password">
-                    <div class="login-type">Password <input id="email-input" type="password" placeholder = "***************"></div>
-                    </span>
-                    <form id="submission-zone" method="get" action="feed.html">
-                        <button type="button" class="btn btn-primary">Login</button>
-                        <span></span>
-                        <button type="button" class="btn btn-primary">Sign up</button>
-                    </form>
-                </span>
-            </div>
-            <hr>
-        </main>
-        <footer>
-            <span id="sellout">
-                <div id="sellout-kid">
-                <div class="sellout-section">Chandler Brown</div>
-                <div class="sellout-section" id="git"><a href="https://github.com/Chanmanb?tab=repositories">Github account (please subscribe)</div>
-                </div>
-            </span>
-        </footer>
+        <div>howdy</div>
     </body>
-</html>
+</div>
