--- a/HTML/src/friends/friends.html
+++ b/HTML/src/friends/friends.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body class="app">
         <header>
             <div><h1 id="Site-name">PesterPage</h1></div>
             <nav id="navigator-nav">
